test-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: test-app-mapping
      prefix: /test
      service: test-app:80
spec:
  rules:
    - host:  localhost
      http:
        paths:
        - path: /test
          pathType: ImplementationSpecific
          backend:
            service:
              name: test-app
              port:
                number: 80
